feat(generator): 优化代码生成器工具参数并改进前端代码面板UI
- 为代码生成器工具添加CodeGenTypeEnum类型参数
- 在前端代码面板中添加动态背景图片展示
- 实现代码面板自动滚动跟随功能和手动暂停机制
- 更新环境配置中的部署域名设置
- 优化代码生成过程中的资源处理和错误处理机制
- 添加代码面板的视觉样式改进和滚动条美化
- 重构代码生成流程以支持源版本参数传递